--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         
         <h2>Introduction</h2>
         <p>NBA is not just about basketball; it’s also about the culture that surrounds it. The <a href="https://nba2kapk.org/">NBA 2K20 apk</a> game’s soundtrack plays a big part in creating this atmosphere. This year’s soundtrack features music from top artists like Nipsey Hussle, Drake, and Travis Scott. The developers have also introduced a new feature that allows them to add new songs throughout the season, keeping the music fresh.</p>
-        <img src="D:\Mirha Chrome\nba music.jpg" alt="nba music"  width="500" height="600" style="display: block; margin: 0 auto;">
+        <img src="D:\Mirha Chrome\nba music.jpg" alt="nba music"  width="500" height="600" >
         <h2>Big Names on the Soundtrack</h2>
         <p>The NBA 2K20 soundtrack includes a variety of songs from different genres, but it mainly focuses on hip-hop. Some of the key artists and their songs featured in the game are:</p>
         <ul>
