--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NBA 2K20 Soundtrack</title>
+    <title>NBA 2K20 Soundtrack: Featuring Nipsey Hussle, Drake, and Travis Scott</title>
+    <meta name="description" content="Discover the NBA 2K20 soundtrack featuring top artists like Nipsey Hussle, Drake, and Travis Scott. Explore the music that enhances your gaming experience with fresh tracks added throughout the season.">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://nba2kapk.org">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -53,7 +56,8 @@
         
         <h2>Introduction</h2>
         <p>NBA is not just about basketball; it’s also about the culture that surrounds it. The <a href="https://nba2kapk.org/">NBA 2K20 apk</a> game’s soundtrack plays a big part in creating this atmosphere. This year’s soundtrack features music from top artists like Nipsey Hussle, Drake, and Travis Scott. The developers have also introduced a new feature that allows them to add new songs throughout the season, keeping the music fresh.</p>
-        <img src="D:\Mirha Chrome\nba music.jpg" alt="nba music"  width="500" height="600">
+        <img src="D:\Mirha Chrome\nba music.jpg" alt="nba music"  width="500" height="600" style="display: block; margin: 0 auto;">
+        
         <h2>Big Names on the Soundtrack</h2>
         <p>The NBA 2K20 soundtrack includes a variety of songs from different genres, but it mainly focuses on hip-hop. Some of the key artists and their songs featured in the game are:</p>
         <ul>
