--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h1>NBA 2K20 Soundtrack: Featuring Nipsey Hussle, Drake, and Travis Scott</h1>
         
         <h2>Introduction</h2>
-        <p>NBA is not just about basketball; it’s also about the culture that surrounds it. The <a href="https://nba2kapk.org/">NBA 2K20 apk</a> game’s soundtrack plays a big part in creating this atmosphere. This year’s soundtrack features music from top artists like Nipsey Hussle, Drake, and Travis Scott. The developers have also introduced a new feature that allows them to add new songs throughout the season, keeping the music fresh.</p>
+        <p>NBA is not just about basketball; it’s also about the culture that surrounds it. The <a href="https://nba2kapk.org/">Latest version of NBA 2K20 apk</a> game’s soundtrack plays a big part in creating this atmosphere. This year’s soundtrack features music from top artists like Nipsey Hussle, Drake, and Travis Scott. The developers have also introduced a new feature that allows them to add new songs throughout the season, keeping the music fresh.</p>
         <img src="D:\Mirha Chrome\nba music.jpg" alt="nba music"  width="500" height="600" style="display: block; margin: 0 auto;">
         
         <h2>Big Names on the Soundtrack</h2>
