--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>NBA 2K20 Soundtrack: Featuring Nipsey Hussle, Drake, and Travis Scott</title>
     <meta name="description" content="Discover the NBA 2K20 soundtrack featuring top artists like Nipsey Hussle, Drake, and Travis Scott. Explore the music that enhances your gaming experience with fresh tracks added throughout the season.">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://nba2kapk.org">
+    <link rel="canonical" href="https://nba2k20.vercel.app/">
     <style>
         body {
             font-family: Arial, sans-serif;
