--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NBA 2K20 Soundtrack: Featuring Nipsey Hussle, Drake, and Travis Scott</title>
-    <meta name="description" content="Discover the NBA 2K20 soundtrack featuring top artists like Nipsey Hussle, Drake, and Travis Scott. Explore the music that enhances your gaming experience with fresh tracks added throughout the season.">
+    <meta name="description" content="Discover the NBA 2K20 soundtrack featuring top artists like Nipsey Hussle, Drake, and Travis Scott that enhances your gaming experience with fresh tracks.">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://nba2k20.vercel.app/">
     <style>
